@@ -16,6 +16,7 @@ Changes in progress
 - Added ability to decide if a client is "Servei Educatiu" (Trello #981)
 - Added theme reactor-serveis-educatius (Trello #981)
 - Check if the path is absolute or relative to mount the header link (Trello #1008)
+- Fixed admin users not being able to delete users (Trello #991)
 
 
 Changes 15.10.09
